<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_36dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_events"
            android:icon ="@drawable/ic_notifications_active_black_36dp"
            android:title ="@string/events_and_notification"/>
        <item
            android:id="@+id/nav_mess"
            android:icon="@drawable/ic_restaurant_black_36dp"
            android:title="@string/mess" />
        <item
            android:id="@+id/nav_acadmic"
            android:icon="@drawable/ic_school_black_36dp"
            android:title="@string/academic" />

       <!-- <item
            android:id="@+id/nav_hostel"
            android:icon="@drawable/ic_airline_seat_individual_suite_black_36dp"
            android:title="@string/hostel" />-->
        <item
            android:id="@+id/nav_rewardvideo"
            android:icon="@drawable/ic_card_giftcard_black_36dp"
            android:title="@string/earn_reward"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_suggestview"
            android:icon="@drawable/ic_poll_black_36dp"
            android:title="@string/suggestview" />

      <!--  <item                                                             add when needed
            android:id ="@+id/nav_upload"
            android:icon ="@drawable/ic_file_upload_black_36dp"
            android:title="@string/upload_section"/>-->

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_contactus"
                android:icon="@drawable/ic_headset_mic_black_36dp"
                android:title="@string/contactus" />

        </menu>
    </item>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_present_to_all_black_36dp"
         android:title="@string/logout" />

</menu>
