<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/card_album_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/album_title_padding"
                android:paddingRight="@dimen/album_title_padding"
                android:paddingTop="@dimen/album_title_padding"
                android:text="@string/team_ur_buddy"
                android:textAlignment="center"
                android:textColor="#344776"
                android:textStyle="bold"
                android:textSize="@dimen/album_title" />


            <ImageView
                android:id="@+id/imageview1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="30dp"
                android:src="@drawable/mobile" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_mob"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@+id/imageview1"
                android:layout_alignTop="@+id/imageview1" />
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/mail_id"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/imageview1"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_email_id"
                android:layout_alignBottom="@+id/imageView2"
                android:layout_alignStart="@+id/textView2" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>