<android.support.constraint.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
   android:background="@drawable/loginbg"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="143dp"
        android:layout_height="111dp"
        app:srcCompat="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="14dp"
        android:text="Ur Buddy"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.502" />

    <EditText
        android:id="@+id/email"
        android:layout_width="272dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/rounded"
        android:drawableStart="@drawable/ic_person_white_18dp"
        android:hint="@string/email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingEnd="4dp"
        android:paddingStart="8dp"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/password"
        android:layout_width="265dp"
        android:layout_height="44dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:layout_weight="9.23"
        android:background="@drawable/rounded"
        android:drawableStart="@drawable/ic_vpn_key_white_18dp"
        android:hint="@string/password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingEnd="4dp"
        android:paddingStart="8dp"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/login"
        android:layout_width="142dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/pressedbutton"
        android:elevation="24dp"
        android:text="@string/login"
        android:textColor="#c26dc3f1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.115"/>



    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="sendpassresetlink"
        android:text="@string/forgot_password"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:layout_marginStart="-3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:onClick="launchsignup"
        android:text="@string/ask_signup"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
